src/objects/NAICSHierarchy__c.object
<CustomObject>
    <description>SFDC1-508 Object holding NAICS Hierarchy to provide more information regarding segmentation of the NAICS number</description>
    <fields>
        <fullName>NAICSIndustry__c</fullName>
        <description>SFDC1-508 2 digit description</description>
        <label>NAICS Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICSSubIndustry__c</fullName>
        <description>SFDC1-508 NAICS sub industry field to hold sub-industry information</description>
        <label>NAICS Sub-Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDNAIC__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>NAC{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID NAIC</label>
        <type>AutoNumber</type>
    </fields>
    <label>NAICS Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NAICS 4 Digits</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAICS Hierarchies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>